# python-starters

./: README.md  test_projects.sh
app/: README.md  myregex.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt
app/.circleci/: config.yml
app/src/: app.py
app/tests/: test_label_impl.py  test_mypattern.py  test_myregex.py
app/website/: mkdocs.yml
application/: .editorconfig  .gitignore  README.md  pyproject.toml
application/.circleci/: config.yml
application/.github/actions/setup-workspace/: action.yaml  action.yml
application/.github/workflows/: code-analysis.yaml  code-analysis.yml
application/src/: label_impl.py
application/website/: mkdocs.yml
application/website/docs/: index.md
notebook/: .editorconfig  .gitignore  README.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  tables.py
notebook/resources/: receipt.csv
notebook/website/: mkdocs.yaml  mkdocs.yml
notebook/website/docs/: index.md
src/: logo.ai
