[build-system]
requires = ["setuptools>=66.1"]
build-backend = 'setuptools.build_meta'

[project]
name = "app"
version = '0.1'
license = { text = "Apache-2.0" }
description = "Lorem ipsum"
readme = "README.md"
authors = [
  { name = "John Doe", email = "johndoe@mail.com" }
]
keywords = ["awesome app", "cool stuff"]
requires-python = ">=3.8.0"

[project.urls]
"Source Code" = "https://github.com/johndoe/app"
"Bug Tracker" = "https://github.com/johndoe/app/issues"

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*test_*.py"]
